# sofia-plotter-tools

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  docker-compose-host.yml  docker-compose-push.yml  docker-compose.yml  fix-network.sh  install-docker-pi.sh  main.py  plot.toml  pyproject.toml  run-backend-no-debug.sh  run-backend.sh  run-dev.sh  run-frontend.sh  update.sh  vpype_example.py
.cursor/: mcp.json
.github/workflows/: deploty-mini-plotter.yml  deploy-mini-plotter.yml  deploy-pi-software.yml
app/: gcode_sender.py  server.py  utils.py  vpype_convert.py
frontend/: .dockerignore  Dockerfile  package.json
frontend/src/: App.tsx  index.css  index.html
frontend/src/components/: BottomBar.tsx  GCODEViewer.tsx  MultiToolModal.tsx  Parameters.tsx  SVGDropzone.tsx  SVGViewer.tsx  SizeWarningDialog.tsx
frontend/src/components/ui/: dialog.tsx  input.tsx  (+1 more)
frontend/src/utils/: svgParser.ts
frontend/styles/: globals.css
models/STL/: gravity-pen-holder_v1.stl  gravity-pen-holder_v2.stl
python/: requirements.txt
sd/macros/: test_motion.g
sd/sys/: config-override.g  config.g.bak  dwc-settings.json  homea.g  homeall.g  homex.g  homey.g  homez.g
systemd/: serve-svg-dropper-backend.service  serve-svg-dropper-frontend.service
web-apps/svg-dropper/backend/: Europe King - Signed copy (1) (1)  plot.toml  pyproject.toml  server.py  svg_to_paths.py  test.json  utils.py
web-apps/svg-dropper/backend/tests/: insert_toolchange.py  test_plotly_rapids.py
web-apps/svg-dropper/frontend/: bun.lockb  index.html  package-lock.json  package.json  vite.config.js
(+8 files in other folders)
